deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: met-ingress
spec:
  rules:
  - http:
      paths:
      - path: /prod/met
        pathType: Prefix
        backend:
          service:
            name: met
            port:
              number: 8080
